service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: NodePort
  selector:
    app: odoo-app
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8069
      targetPort: 8069
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30015
